Created click events for gems.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p>Good luck!</p>
             </div>
         </div>
-        <div class="row randDisplay">
+        <div class="row random">
             <div class="col-md">
                 <p class="magicNum">Magic Number:</p>
             </div>
@@ -52,9 +52,9 @@
             <div class="col-md-3"></div>
             <p class="lossDisplay">Losses: 0</p>
         </div>
-        <div class="row scoreDisplay">
+        <div class="row score">
             <div class="col-md-3">
-                <p>Your Current Score: 0</p>
+                <p class="scoreDisplay">Your Current Score: 0</p>
             </div>
         </div>
         <div class="row gems">
