Adjusted CSS for web page.

--- a/index.html
+++ b/index.html
@@ -41,33 +41,34 @@
             </div>
         </div>
         <div class="row random">
-            <div class="col-md">
+            <div class="col-sm">
                 <p class="magicNum">Magic Number:</p>
             </div>
         </div>
         <div class="row winsLosses">
-            <div class="col-md">
+            <div class="col-sm">
                 <p class="winsDisplay">Wins: 0</p>
             </div>
-            <div class="col-md-3"></div>
-            <p class="lossDisplay">Losses: 0</p>
+            <div class="col-sm">
+                <p class="lossDisplay">Losses: 0</p>
+            </div>
         </div>
         <div class="row score">
-            <div class="col-md-3">
+            <div class="col-sm">
                 <p class="scoreDisplay">Your Current Score: 0</p>
             </div>
         </div>
         <div class="row gems">
-            <div class="col-md">
+            <div class="col-sm">
                 <img class="gem img-fluid" id="sapphire" src="assets/images/sapphire.png" alt="sapphire">
             </div>
-            <div class="col-md">
+            <div class="col-sm">
                 <img class="gem img-fluid" id="garnet" src="assets/images/garnet.png" alt="garnet">
             </div>
-            <div class="col-md">
+            <div class="col-sm">
                 <img class="gem img-fluid" id="topaz" src="assets/images/topaz.png" alt="topaz">
             </div>
-            <div class="col-md">
+            <div class="col-sm">
                 <img class="gem img-fluid" id="emerald" src="assets/images/emerald.png" alt="emerald">
             </div>
         </div>
