Updated instructions in HTML and created a to-do list in JS file.

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
         </div>
         <div class="row instructions">
             <div class="col-sm">
-                <p>A mystical gnome has chosen a magic number.</p>
+                <p>You've been given a magic number.</p>
                 <p>There are four crystals below. By clicking on a crystal, you'll add a specific amount of points
                     to
                     your total score.</p>
                 <p>You win the game by matching your total score to magic number. You'll lose if your total score
                     goes above the magic number.</p>
-                <p>The value of each crystal is hidden from you until you click on it.</p>
-                <p>Each time when the game starts, the gnome will change the values of each crystal.</p>
+                <p>The value of each crystal is hidden from you until you click on it.
+                    At the start of each game, the values of each crystal will change.</p>
                 <p>Good luck!</p>
             </div>
         </div>
