Added background audio and sound effects. Removed unnecessary images from images directory.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
 </head>
 
 <body>
+    <audio id="mysteryMusic" src="assets/sound/mysteryMusic.mp3" loop="loop"></audio>
+    <audio id="winSound" src="assets/sound/winSound.mp3" ></audio>
+    <audio id="loseSound" src="assets/sound/loseSound.mp3" ></audio>
     <div class="container mainContainer">
         <div class="row">
-            <div class="col-sm">
+            <div class="col-sm">    
                 <img class="gameTitle img-fluid" src="assets/images/gameTitle.png" alt="Crystals Collector Game">
             </div>
         </div>
